<resources>
    <string name="app_name">BankAccountManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">register</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="fullname">FullName</string>
    <string name="postal_code">Postal Code</string>
    <string name="father_s_name">Father\'s name</string>
    <string name="number_of_bank_accounts">Number of bank accounts</string>
    <string name="edit_information">Edit information</string>
    <string name="bankIntro">اطلاعات حساب بانکی خود را وارد کنید:</string>
    <string name="cardNumber">شماره کارت خود را وارد کنید:</string>
    <string name="balance">موجودی حساب:</string>
    <string name="yourBankInfo">اطلاعات حساب بانکی شما</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="selectedAccount">اطلاعات حساب بانکی منتخب:</string>
    <string-array name="accountType">
        <item>سپرده کوتاه مدت</item>
        <item>سپرده بلند مدت</item>
        <item>قرض الحسنه جاری</item>
    </string-array>
   <string name="title">DELETE Accounts?</string>
    <string name="supporting_text">Are you sure about delete accounts?</string>
    <string name="decline">No</string>
    <string name="accept">Yes</string>
    <string name="number_of_registered_accounts">تعداد حساب های ثبت شده:</string>
    <string name="userSelectedNumber">تعداد حساب های بانکی شما:</string>
</resources>