<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ShowAccountFragment"
    android:background="@drawable/blue_outline">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yourBankInfo"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:background="@drawable/blue_outline"
            />
        <TextView
            android:id="@+id/accountNumberTxv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="نوع حساب بانکی:"
            android:layout_margin="10dp"
            android:background="@drawable/pink_outline"
            style="@style/txvStyle"/>
        <TextView
            android:id="@+id/accountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blue_outline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cardNumber"
            android:background="@drawable/pink_outline"
            style="@style/txvStyle"/>
        <TextView
            android:id="@+id/showCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blue_outline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="موجودی حساب:"
            android:background="@drawable/pink_outline"
            style="@style/txvStyle"/>
        <TextView
            android:id="@+id/showBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blue_outline"/>
        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/next"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/back"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:strokeWidth ="3dp"
            app:strokeColor="#673AB7"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>


    </LinearLayout>
</ScrollView>